vault-devserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: <domain>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault-dev-service
            port:
              number: 8200
  tls:
    - hosts:
        - <domain>
      secretName: <domain>-tls
